--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -12,7 +12,7 @@
 }
 
 .navbar-components {
-    width: 100%;
+    width: 96%;
     height: 65px;
     margin: auto;
 
@@ -32,4 +32,13 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.navbar-components .navbar-buttons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+    width: 250px;
 }
