--- a/src/components/Buttons/PrimaryButton/PrimaryButton.css
+++ b/src/components/Buttons/PrimaryButton/PrimaryButton.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
 
-    background-color: #43C6AC;
+    background-color: #2c9ba6;
     background-clip: padding-box;
 
     border: 1px solid transparent;
@@ -20,10 +20,10 @@
   }
   
   .primary-button:hover {
-    background-color: #3ab59d;
+    background-color: rgb(48, 169, 180);
   }
   
   .primary-button:active {
-    background-color: #43C6AC;
+    background-color: rgb(43, 164, 175);
     box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
   }
