--- a/src/components/Buttons/SecondaryButton/SecondaryButton.css
+++ b/src/components/Buttons/SecondaryButton/SecondaryButton.css
@@ -6,12 +6,12 @@
     background-color: #FFFFFF;
     background-clip: padding-box;
 
-    border: 1px solid #43C6AC;
+    border: 1px solid #2c9ba6;
     border-radius: .25rem;
     box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
     box-sizing: border-box;
 
-    color: #43C6AC;
+    color: #2c9ba6;
     font-size: 16px;
     font-weight: 600;
     
@@ -20,8 +20,8 @@
   }
   
   .secondary-button:hover {
-    color: #23826f;
-    border-color: #23826f;
+    color: #21818a;
+    border-color: #21818a;
   }
   
   .secondary-button:active {
