--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -13,7 +13,7 @@
 
 .navbar-components {
     width: 96%;
-    height: 65px;
+    height: inherit;
     margin: auto;
 
     display: flex;
@@ -24,7 +24,7 @@
 
 .navbar-components .navbar-logo {
     width: 220px;
-    height: 50px;
+    height: 40px;
     padding: 20px 10px;
 }
 
